Fix menu on mobiles

--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,11 @@
 $primary: #B10E4C;
 $secondary: #7B0D7C;
 
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #fefefe;
   color: #222;
